befor add sortind

--- a/DeadlinesManager/Details/ProjectDetails.storyboard
+++ b/DeadlinesManager/Details/ProjectDetails.storyboard
@@ -160,6 +160,33 @@
             </objects>
             <point key="canvasLocation" x="-404" y="1455.6650246305419"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0eS-nd-R0X">
+            <objects>
+                <viewController id="z9V-yL-QzX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vB0-V5-tHJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zai-fS-Tuw">
+                                <rect key="frame" x="8" y="44" width="359" height="734"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Xd6-1y-SK5" firstAttribute="trailing" secondItem="Zai-fS-Tuw" secondAttribute="trailing" constant="8" id="c5g-lw-gOb"/>
+                            <constraint firstItem="Xd6-1y-SK5" firstAttribute="bottom" secondItem="Zai-fS-Tuw" secondAttribute="bottom" id="od1-a5-Imp"/>
+                            <constraint firstItem="Zai-fS-Tuw" firstAttribute="top" secondItem="Xd6-1y-SK5" secondAttribute="top" id="pt9-a9-jQd"/>
+                            <constraint firstItem="Zai-fS-Tuw" firstAttribute="leading" secondItem="Xd6-1y-SK5" secondAttribute="leading" constant="8" id="qxU-Sd-2uN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Xd6-1y-SK5"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Fb-2I-jNE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="410.39999999999998" y="1455.6650246305419"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="BEp-1O-d4s">
             <objects>
